# xmlity

./: 404.html  CNAME  Cargo.toml  README.md  book.toml  help.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/: dependabot.yml
.github/workflows/: book.yaml  release-plz.yaml  rust.yaml
1_getting_started/: index.html
2_the_data_model/: index.html
3_using_derive/: index.html
4_custom_serialization/: deserialize.html  index.html  serialize.html  serialize_attribute.html
5_implementing_an_xml_library/: deserializer.html  index.html  serializer.html
6_examples/: index.html
7_feature_flags/: index.html
guide/chapter_1_getting_started/: index.html
guide/chapter_2_the_data_model/: index.html
guide/chapter_3_derive_details/: index.html
guide/chapter_4_implementing_a_de_serializer/: deserializer.html  index.html  serializer.html
src/: README.md
src/guide/chapter_3_derive_details/: README.md
src/guide/chapter_4_implementing_a_de_serializer/: serializer.md
xmlity/: CHANGELOG.md  Cargo.toml
xmlity-book/: README.md  book.toml
xmlity-book/src/: README.md  SUMMARY.md  help.md
xmlity-book/src/1_getting_started/: README.md
xmlity-book/src/2_the_data_model/: README.md
xmlity-book/src/3_using_derive/: README.md
xmlity-derive/: CHANGELOG.md  Cargo.toml  README.md
xmlity-derive/src/: common.rs  derive.rs  lib.rs  options.rs  utils.rs
xmlity-derive/src/de/: DeserializationGroup.md  Deserialize.md  builders.rs  common.rs  deserialization_group.rs  element.rs  group.rs  mod.rs
xmlity-derive/src/de/components/: element_loop_accessor.rs  mod.rs  seq_loop_accessor.rs
xmlity-derive/src/de/deserialize/: attributes.rs  elements.rs  mod.rs  none.rs  simplified_element_wrapper.rs  single_child_element.rs  values.rs  variant.rs
xmlity-derive/src/options/: enums.rs  mod.rs  records.rs
xmlity-derive/src/ser/: SerializationGroup.md  Serialize.md  SerializeAttribute.md  attribute.rs  builders.rs  common.rs  element.rs  group.rs  mod.rs  serialization_group.rs  serialize_attribute.rs
xmlity-derive/src/ser/serialize/: element.rs  mod.rs  none.rs  value.rs  variant.rs
xmlity-derive/tests/: attribute.rs  basic.rs  enum_value.rs  group.rs  mixed.rs  single_namespaces.rs  strict_order.rs  strings.rs  xsd.rs
xmlity-quick-xml/: CHANGELOG.md  Cargo.toml  README.md
xmlity-quick-xml/benches/: xmlity_vs_serde.rs
xmlity-quick-xml/examples/: README.md  advanced_usage.rs  attributes.rs  basic_elements.rs  custom_serialization.rs  enums_and_values.rs  field_options.rs  groups.rs  namespaces_and_prefixes.rs  ordering_and_unknown.rs
xmlity-quick-xml/src/: de.rs  lib.rs  ser.rs
xmlity-quick-xml/tests/: attribute.rs  basic.rs  common.rs  enum_value.rs  extendable.rs  features.rs  group.rs  mixed.rs  namespace_paths.rs  single_namespaces.rs  strict_order.rs  type_params.rs  utils.rs  xml_value.rs  xsd.rs
xmlity-quick-xml/tests/bugs/: mod.rs  not_stopping.rs
xmlity-quick-xml/tests/elements/: allow_unknown.rs  any_attributes.rs  attribute.rs  attribute_namespace.rs  basic.rs  default.rs  empty_child.rs  enforce_prefix.rs  extendable.rs  generics.rs  group_element_equivalent.rs  ignore_comments.rs  ignore_whitespace.rs  inline_attribute_declarations.rs  inline_blend.rs  inline_declarations.rs  mixed.rs  mod.rs  namespace_access.rs  namespace_expr.rs  option.rs  single_namespace.rs  skip_serializing_if.rs  strict_order.rs
xmlity-quick-xml/tests/groups/: basic.rs  generics.rs  mod.rs  other.rs  unit.rs  unnamed.rs
xmlity-quick-xml/tests/other/: combined.rs  empty.rs  empty_variant.rs  enum_with_no_arm.rs  mod.rs  variant.rs  xml_value.rs
xmlity-quick-xml/tests/text/: enum_value.rs  enum_value_rename_all.rs  extendable.rs  mixed.rs  strings.rs
xmlity-quick-xml/tests/value/: indirect_direct_equal.rs  mod.rs  sub_xml_value.rs  xbrl_linkbase_ref.rs
xmlity-quick-xml/tests/with/: deserialize_with.rs  serialize_with.rs  with_mod.rs
xmlity-quick-xml/tests/with/enums/: deserialize_with.rs  mod.rs  serialize_with.rs  with_mod.rs
xmlity-quick-xml/tests/with/structs/: deserialize_with.rs  mod.rs  serialize_with.rs  with_mod.rs
xmlity-quick-xml/tests/xsd/: top_level_element.rs
xmlity-xml-rs/: Cargo.toml  README.md
xmlity-xml-rs/src/: de.rs  lib.rs  ser.rs
xmlity-xml-rs/tests/: utils.rs  xsd.rs
xmlity-xml-rs/tests/elements/: attribute.rs  default.rs  extendable.rs  generics.rs  inline_attribute_declarations.rs  inline_declarations.rs  single_namespace.rs  strict_order.rs
xmlity-xml-rs/tests/groups/: basic.rs  generics.rs
xmlity-xml-rs/tests/other/: xml_value.rs
xmlity-xml-rs/tests/text/: enum_value.rs  enum_value_rename_all.rs  extendable.rs  mod.rs
xmlity/src/: de.rs  lib.rs  macros.rs  noop.rs  ser.rs
xmlity/src/types/: common.rs  infallible.rs  iterator.rs  mod.rs  primitive.rs  smart.rs  string.rs  tuples.rs  utils.rs  value.rs
xmlity/src/value/: deserialize.rs  deserializer.rs  deserializer_owned.rs  mod.rs  serialize.rs  serializer.rs
xmlity/tests/: utils.rs  value_struct.rs  xml_value.rs  xml_value_macro.rs
xmlity/tests/elements/: element_with_value.rs  mod.rs
(+14 files in other folders)
