[package]
name = "xmlity-derive"
description = "Derive proc-macros for xmlity."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
syn = { version = "2.0.65", features = ["parsing", "visit", "extra-traits"] }
proc-macro2 = "^1.0.80"
quote = "^1.0.42"
darling = "0.20.3"

[lib]
proc-macro = true
