[package]
name = "xmlity-quick-xml"
description = "XMLity implementation of quick-xml."
version = "0.0.8"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
thiserror.workspace = true
xmlity.workspace = true
quick-xml = { version = "0.38.0" }


[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
xmlity = { workspace = true, features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0.210", features = ["derive"] }
quick-xml = { version = "0.38.0", features = ["serialize"] }
yaserde = { version = "0.12.0", features = ["derive"] }
ntest = "0.9.3"

[[bench]]
name = "xmlity_vs_serde"
harness = false
