[package]
name = "xmlity-xml-rs"
description = "XMLity implementation of xml-rs."
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
thiserror.workspace = true
xmlity.workspace = true
xml-rs = "0.8.26"


[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
xmlity = { workspace = true, features = ["derive"] }
